@@ -1,6 +1,8 @@
 Build.PL
 Changes
 lib/Bundle/Theory.pm
+lib/Bundle/Theory/Apache.pm
+lib/Bundle/Theory/Apache2.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
