@@ -1,6 +1,6 @@
 ---
 name: Bundle-Theory
-version: 1.04
+version: 1.05
 author:
   - 'David E. Wheeler <david@kineticode.com>'
 abstract: A bundle to install all of Theory's favorite modules
@@ -17,7 +17,13 @@ recommends:
 provides:
   Bundle::Theory:
     file: lib/Bundle/Theory.pm
-    version: 1.04
+    version: 1.05
+  Bundle::Theory::Apache:
+    file: lib/Bundle/Theory/Apache.pm
+    version: 1.05
+  Bundle::Theory::Apache2:
+    file: lib/Bundle/Theory/Apache2.pm
+    version: 1.05
 generated_by: Module::Build version 0.280801
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
